--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
     <div class="board"></div>
     
-    <input id="game_difficulty_input" type="number" value="4" placeholder="game difficulty">
+    <input id="game_difficulty_input" type="number" value="6" placeholder="game difficulty">
     <button id="reset_game_input">Reset game</button>
+    <span>attempts left: <span id="attempts"></span></span>
 
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
