--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <div class="board"></div>
-    
+
+    <h1>Memory Game</h1>
+
+    <div class="board"></div>    
     <input id="game_difficulty_input" type="number" value="6" placeholder="game difficulty">
     <button id="reset_game_input">Reset game</button>
     <span>attempts left: <span id="attempts"></span></span>
