--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <button id="reset_game_input">Reset game</button>
   <span>attempts left: <span id="attempts"></span></span>
 
-  <script src="assets/script.js"></script>
+  <script src="docs/assets/script.js"></script>
 </body>
 
 </html>
