--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Memory Game</h1>
 
   <div class="board">
-    <img src="../assets/images/card1.png" alt="">
+    <img src="docs/assets/images/card1.png" alt="">
   </div>
   <input id="game_difficulty_input" type="number" value="9" placeholder="game difficulty">
   <button id="reset_game_input">Reset game</button>
